--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
     </head>
     <body>
+        <script type="text/javascript" src="./utils.js"></script>
         <script type="text/javascript" src="./binl_md5.js"></script>
         <script type="text/javascript" src="./ucec.js"></script>
         <script type="text/javascript">
