Hide additional tweaks section for now

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             </details>
         </section>
 
-        <section>
+        <section style="display: none;"><!-- NYI -->
             <h3>Additional tweaks</h3>
             <input type="checkbox" id="smallCaps" name="smallCaps" />
             <label for="smallCaps">Small caps tweak (e.g. BERNKASTEL → <span style="font-variant: small-caps;">Bernkastel</span>, as in Umineko Project). Requires Arno Pro or a suitably generated custom font to be selected above, otherwise names will simply disappear.</label>
